# tsppd-hybrid

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  test.sh
src/tsppd-bin/: ap.cpp  main.cpp
src/tsppd/ap/: ap_solver.cpp  ap_solver.h  gurobi_ap_solver.cpp  gurobi_ap_solver.h  primal_dual_ap_solver.cpp  primal_dual_ap_solver.h
src/tsppd/data/: tsppd_arc.h  tsppd_problem.cpp  tsppd_problem.h  tsppd_problem_generator.cpp  tsppd_problem_generator.h  tsppd_search_statistics.h  tsppd_solution.cpp  tsppd_solution.h  tsppd_tree.cpp  tsppd_tree.h
src/tsppd/io/: tsp_problem_reader.cpp  tsp_problem_reader.h  tsp_problem_writer.cpp  tsp_problem_writer.h  tsp_solution_writer.cpp  tsp_solution_writer.h
src/tsppd/solver/: tsp_solver.h
src/tsppd/solver/ap/: ap_atsp_callback.cpp  ap_atsp_callback.h  ap_atsp_solver.cpp  ap_atsp_solver.h  ap_atsppd_callback.cpp  ap_atsppd_callback.h  ap_atsppd_solver.cpp  ap_atsppd_solver.h
src/tsppd/solver/enumerative/: enumerative_tsp_solver.cpp  enumerative_tsp_solver.h  enumerative_tsppd_solver.cpp  enumerative_tsppd_solver.h
src/tsppd/solver/focacci/: focacci_tsp_solver.cpp  focacci_tsp_solver.h  focacci_tsp_space.cpp  focacci_tsp_space.h  focacci_tsppd_solver.cpp  focacci_tsppd_solver.h  focacci_tsppd_space.cpp  focacci_tsppd_space.h
src/tsppd/solver/focacci/brancher/: focacci_tsp_branch_choice.h  focacci_tsp_brancher.cpp  focacci_tsp_brancher.h  focacci_tsp_closest_neighbor_brancher.cpp  focacci_tsp_closest_neighbor_brancher.h  focacci_tsp_regret_brancher.cpp  focacci_tsp_regret_brancher.h  focacci_tsp_sequential_closest_neighbor_brancher.cpp  focacci_tsp_sequential_closest_neighbor_brancher.h
src/tsppd/solver/focacci/dual/: focacci_closest_neighbor_dual.cpp  focacci_closest_neighbor_dual.h  focacci_tsp_dual.h
src/tsppd/solver/focacci/filter/: focacci_tsp_additive_filter.cpp  focacci_tsp_additive_filter.h  focacci_tsp_aphk_filter.cpp  focacci_tsp_aphk_filter.h  focacci_tsp_assignment_filter.cpp  focacci_tsp_assignment_filter.h  focacci_tsp_filter.h  focacci_tsp_heldkarp_filter.cpp  focacci_tsp_heldkarp_filter.h  focacci_tsp_hkap_filter.cpp  focacci_tsp_hkap_filter.h
src/tsppd/solver/focacci/filter/one_tree/: focacci_tsp_one_tree.cpp  focacci_tsp_one_tree.h
src/tsppd/solver/focacci/one_tree/: focacci_tsppd_one_tree.cpp  focacci_tsppd_one_tree.h
src/tsppd/solver/focacci/propagator/: focacci_tsppd_additive_propagator.cpp  focacci_tsppd_additive_propagator.h  focacci_tsppd_assignment_propagator.cpp  focacci_tsppd_assignment_propagator.h  focacci_tsppd_heldkarp_propagator.cpp  focacci_tsppd_heldkarp_propagator.h  focacci_tsppd_omc_propagator.cpp  focacci_tsppd_omc_propagator.h  focacci_tsppd_precede_cost_propagator.cpp  focacci_tsppd_precede_cost_propagator.h  focacci_tsppd_precede_propagator.h  focacci_tsppd_precede_set_propagator.cpp  focacci_tsppd_precede_set_propagator.h
src/tsppd/solver/gecode/: gecode_tsp_solver.cpp  gecode_tsp_solver.h  gecode_tsp_space.cpp  gecode_tsp_space.h  gecode_tsppd_solver.cpp  gecode_tsppd_solver.h  gecode_tsppd_space.cpp  gecode_tsppd_space.h
src/tsppd/solver/gecode/brancher/: gecode_tsp_branch_choice.h  gecode_tsp_brancher.cpp  gecode_tsp_brancher.h  gecode_tsp_closest_neighbor_brancher.cpp  gecode_tsp_closest_neighbor_brancher.h  gecode_tsp_regret_brancher.cpp  gecode_tsp_regret_brancher.h  gecode_tsp_sequential_closest_neighbor_brancher.cpp  gecode_tsp_sequential_closest_neighbor_brancher.h
src/tsppd/solver/gecode/dual/: gecode_closest_neighbor_dual.cpp  gecode_closest_neighbor_dual.h  gecode_tsp_dual.h
src/tsppd/solver/gecode/propagator/: gecode_tsppd_assignment_propagator.cpp  gecode_tsppd_assignment_propagator.h  gecode_tsppd_omc_propagator.cpp  gecode_tsppd_omc_propagator.h  gecode_tsppd_precede_cost_propagator.cpp  gecode_tsppd_precede_cost_propagator.h  gecode_tsppd_precede_propagator.h  gecode_tsppd_precede_set_propagator.cpp  gecode_tsppd_precede_set_propagator.h
src/tsppd/solver/gurobi/: gurobi_subtour_finder.cpp  gurobi_subtour_finder.h  gurobi_tsp_solver.cpp  gurobi_tsp_solver.h  gurobi_tsppd_plus_solver.cpp  gurobi_tsppd_plus_solver.h  gurobi_tsppd_solver.cpp  gurobi_tsppd_solver.h
src/tsppd/solver/gurobi/callback/: gurobi_precedence_callback.cpp  gurobi_precedence_callback.h  gurobi_subtour_elimination_callback.cpp  gurobi_subtour_elimination_callback.h  gurobi_tsp_callback.h  gurobi_tsp_callback_handler.cpp  gurobi_tsp_callback_handler.h
src/tsppd/solver/oneil/: oneil_atsppd_plus_solver.cpp  oneil_atsppd_plus_solver.h  oneil_atsppd_solver.cpp  oneil_atsppd_solver.h  oneil_tsppd_callback.cpp  oneil_tsppd_callback.h  oneil_tsppd_plus_solver.cpp  oneil_tsppd_plus_solver.h  oneil_tsppd_solver.cpp  oneil_tsppd_solver.h
src/tsppd/solver/ruland/: ruland_subtour_finder.cpp  ruland_subtour_finder.h  ruland_tsp_solver.cpp  ruland_tsp_solver.h  ruland_tsppd_plus_solver.cpp  ruland_tsppd_plus_solver.h  ruland_tsppd_solver.cpp  ruland_tsppd_solver.h
src/tsppd/solver/ruland/callback/: ruland_precedence_callback.cpp  ruland_precedence_callback.h  ruland_subtour_elimination_callback.cpp  ruland_subtour_elimination_callback.h  ruland_tsp_callback.h  ruland_tsp_callback_handler.cpp  ruland_tsp_callback_handler.h
src/tsppd/solver/sarin/: sarin_atsp_callback.cpp  sarin_atsp_callback.h  sarin_atsp_solver.cpp  sarin_atsp_solver.h  sarin_atsppd_callback.cpp  sarin_atsppd_callback.h  sarin_atsppd_plus_solver.cpp  sarin_atsppd_plus_solver.h  sarin_atsppd_solver.cpp  sarin_atsppd_solver.h  sarin_tsp_callback.cpp  sarin_tsp_callback.h  sarin_tsp_solver.cpp  sarin_tsp_solver.h  sarin_tsppd_plus_solver.cpp  sarin_tsppd_plus_solver.h  sarin_tsppd_solver.cpp  sarin_tsppd_solver.h
src/tsppd/util/: exception.h  stacktrace.cpp  stacktrace.h  string.h
